--- a/changelog.txt
+++ b/changelog.txt
@@ -1,2 +1,3 @@
-- Новое обновление
-- Йоу
+- Теперь будет вылазить такое сообщение в новой версии скрипта.
+- Добавлена команда: /дмкпз.
+- Мелкие изменения скрипта.
