--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,3 @@
-- Теперь будет вылазить такое сообщение в новой версии скрипта.
-- Добавлена команда: /дмкпз.
+- Теперь будет вылазить такое сообщение в новой версии скрипта;
+- Добавлена команда: /дмкпз;
 - Мелкие изменения скрипта.
