--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,3 @@
-- Теперь будет вылазить такое сообщение в новой версии скрипта;
+- Теперь будет вылазить такое окно в новых версиях скрипта;
 - Добавлена команда: /дмкпз;
-- Мелкие изменения скрипта.
+- Мелкие изменения кода.
