--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,4 @@
 - Теперь будет вылазить такое окно в новых версиях скрипта;
 - Добавлена команда: /дмкпз;
-- Мелкие изменения кода.
+— Мелкие изменения кода.
+p.s ы
