--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,3 @@
-- Теперь будет вылазить такое окно в новых версиях скрипта;
-- Добавлена команда: /дмкпз;
-— Мелкие изменения кода.
-p.s ы
+— Теперь будет вылазить такое окно в новых версиях скрипта
+— Добавлена команда: /дмкпз
+— Мелкие изменения кода
