--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+[14.03.2025]
 — Теперь будет вылазить такое окно в новых версиях скрипта
 — Добавлена команда: /дмкпз
+— Мелкие изменения кода
+
+[15.03.2025]
 — Мелкие изменения кода
