--- a/changelog.txt
+++ b/changelog.txt
@@ -8,3 +8,6 @@
 
 [16.03.2025] v1.3.6
 — Бинд на Num0 - удален (проверка на софт ЖБК).
+
+[17.03.2025] v1.3.7
+— Изменены некоторые формулировки и ссылки в тексте сообщения после отправки команды..
