--- a/changelog.txt
+++ b/changelog.txt
@@ -10,4 +10,4 @@
 — Бинд на Num0 - удален (проверка на софт ЖБК).
 
 [17.03.2025] v1.3.7
-— Изменены некоторые формулировки и ссылки в тексте сообщения после отправки команды..
+— Изменены некоторые формулировки и ссылки в тексте сообщения после отправки команды.
