--- a/changelog.txt
+++ b/changelog.txt
@@ -11,3 +11,7 @@
 
 [17.03.2025] v1.3.7
 — Изменены некоторые формулировки и ссылки в тексте сообщения после отправки команды.
+
+[17.03.2025] v1.3.8
+— Убраны телепорты по gps и вкладка из меню "Телепорты [3+]".
+— Изменены некоторые формулировки.
