--- a/changelog.txt
+++ b/changelog.txt
@@ -15,3 +15,7 @@
 [17.03.2025] v1.3.8
 — Убраны телепорты по gps и вкладка из меню "Телепорты [3+]".
 — Изменены некоторые формулировки.
+
+[18.03.2025] v1.4.0
+— У большинства команд теперь есть случайные 3, 4 или 5 вариантов ответа. При вводе команды отправляется случайный текст из возможных.
+— Для многих команд установлен КД в 1 секунду перед отправкой.
