--- a/changelog.txt
+++ b/changelog.txt
@@ -19,3 +19,6 @@
 [18.03.2025] v1.4.0
 — У большинства команд теперь есть случайные 3, 4 или 5 вариантов ответа. При вводе команды отправляется случайный текст из возможных.
 — Для многих команд установлен КД в 1 секунду перед отправкой.
+
+[18.03.2025] v1.4.1
+— Исправлена ошибка, из за которой сообщение не отправлялось в ans.
