--- a/changelog.txt
+++ b/changelog.txt
@@ -22,3 +22,6 @@
 
 [18.03.2025] v1.4.1
 — Исправлена ошибка, из за которой сообщение не отправлялось в ans.
+
+[18.03.2025] v1.4.2 (Обновление пока недоступно)
+— Убрана задержка в 1 секунду для NumPad клавиш.
