--- a/changelog.txt
+++ b/changelog.txt
@@ -23,5 +23,6 @@
 [18.03.2025] v1.4.1
 — Исправлена ошибка, из за которой сообщение не отправлялось в ans.
 
-[18.03.2025] v1.4.2 (Обновление пока недоступно)
-— Убрана задержка в 1 секунду для NumPad клавиш.
+[18.03.2025] v1.5.0
+— У большинства команд теперь есть до 28 случайных вариантов ответа. При вводе команды отправляется случайный текст из доступных.
+— Все ответы теперь НЕ отправляются автоматически. Вы должны сами нажать клавишу Enter.
