--- a/changelog.txt
+++ b/changelog.txt
@@ -26,3 +26,6 @@
 [18.03.2025] v1.5.0
 — У большинства команд теперь есть до 28 случайных вариантов ответа. При вводе команды отправляется случайный текст из доступных.
 — Все ответы теперь НЕ отправляются автоматически. Вы должны сами нажать клавишу Enter.
+
+[19.03.2025] v1.5.1
+— Теперь при запуске скрипта блокируется клавиша CapsLock. Что бы включить/выключить CapsLock нажмите сочитание клавиш Alt + CapsLock или CTRL + CapsLock.
